--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,15 @@
 name: ds_assessment
 channels:
   - defaults
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - python=3.12.8
+  - beautifulsoup4
+  - lxml
   - matplotlib
   - numpy
   - pandas
+  - python=3.12.8
   - requests
-  - beautifulsoup4
-  - lxml
-  - re
   - seaborn
+prefix: /Users/junweisun/miniconda3/envs/ds_assessment
